[tool.poetry]
name = "md-admin"
version = "0.1.0"
description = "This is a markdown project ( blog or note ) management tools implemented with python"
authors = ["zweix <1979803044@qq.com>"]
readme = "README.md"
packages = [{include = "md_admin"}]

[tool.poetry.dependencies]
python = "^3.10.6"
chardet = "^5.1.0"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
